Bug 1517577 - DataTransferItemList::Add should use nsVariantCC. r=nika, a=RyanVM

nsVariant isn't cycle collected, so this can cause a leak.

Differential Revision: https://phabricator.services.mozilla.com/D16124